--- a/docs/antora/modules/ROOT/pages/management/configuration.adoc
+++ b/docs/antora/modules/ROOT/pages/management/configuration.adoc
@@ -1,6 +1,6 @@
 = Configuration
 Mona Bärenfänger <mona@lightcurve.io>
-:description: How to configure Lisk Core using custom config files.
+:description: How to configure Klayr Core using custom config files.
 // Settings
 :toc:
 :source-highlighter: coderay
@@ -16,8 +16,8 @@ Mona Bärenfänger <mona@lightcurve.io>
 :url_docker: management/docker.adoc
 :url_enable_pom: management/enabling-misbehavior-report.adoc
 :url_management_forging: management/forging.adoc
-:url_pm2_restart: management/pm2.adoc#refreshing-restarting-lisk-core
-:url_config_options: https://lisk.com/documentation/lisk-sdk/v6/references/typedoc/modules/_liskhq_lisk_framework_report_misbehavior_plugin.html#$config-options
+:url_pm2_restart: management/pm2.adoc#refreshing-restarting-klayr-core
+:url_config_options: https://klayr.com/documentation/klayr-sdk/v6/references/typedoc/modules/_klayrhq_klayr_framework_report_misbehavior_plugin.html#$config-options
 
 
 :url_enable_misbehavior: {docs_general}run-blockchain/enabling-misbehavior-report.adoc
@@ -25,39 +25,39 @@ Mona Bärenfänger <mona@lightcurve.io>
 
 
 // :url_source: management/source.adoc
-:url_sdk_plugins: lisk-sdk::plugins/index.adoc
+:url_sdk_plugins: klayr-sdk::plugins/index.adoc
 //TODO: Update the commented out hyperlinks once the pages are available.
-// NOTE: A complete command reference with all available options for starting Lisk Core can be found in the xref:{url_config_start}[Lisk Core CLI].
+// NOTE: A complete command reference with all available options for starting Klayr Core can be found in the xref:{url_config_start}[Klayr Core CLI].
 
-NOTE: A complete command reference with all available options for starting Lisk Core can be found in Lisk Core CLI's reference page.
+NOTE: A complete command reference with all available options for starting Klayr Core can be found in Klayr Core CLI's reference page.
 
 == Using a network-specific default configuration
 
-To quickly connect your Lisk Core node to a specific network, specify the desired network with the `--network` or `-n` flag.
+To quickly connect your Klayr Core node to a specific network, specify the desired network with the `--network` or `-n` flag.
 
-This will use the default config file for the specific network when starting Lisk Core.
-The default configurations are located in the `config` folder of Lisk Core.
+This will use the default config file for the specific network when starting Klayr Core.
+The default configurations are located in the `config` folder of Klayr Core.
 
 [source,bash]
 ----
-lisk-core start --network=NETWORK
+klayr-core start --network=NETWORK
 ----
 
 `NETWORK` may be `mainnet`, `testnet`, or `devnet`.
 
 == Using a custom config file
 
-Lisk Core uses the default config for connecting to the mainnet by default.
+Klayr Core uses the default config for connecting to the mainnet by default.
 
-However, it is possible to use Lisk Core with a custom config, by specifying the path to the config file with the `--config` or `-c` flag.
+However, it is possible to use Klayr Core with a custom config, by specifying the path to the config file with the `--config` or `-c` flag.
 
-The custom config file needs to follow the JSON config structure of Lisk Core.
-A straightforward method is to copy one of the network-specific default configs of Lisk Core and adjust it to suit your requirements.
+The custom config file needs to follow the JSON config structure of Klayr Core.
+A straightforward method is to copy one of the network-specific default configs of Klayr Core and adjust it to suit your requirements.
 
-./home/lisk/
+./home/klayr/
 [source,bash]
 ----
-cp .lisk/lisk-core/config/testnet/config.json custom-config.json
+cp .klayr/klayr-core/config/testnet/config.json custom-config.json
 vim custom-config.json
 ----
 
@@ -65,7 +65,7 @@ NOTE: If you intend to connect the node to the mainnet, change the `testnet` to 
 
 [source,bash]
 ----
-lisk-core start --config=/home/lisk/custom-config.json --overwrite-config
+klayr-core start --config=/home/klayr/custom-config.json --overwrite-config
 ----
 
 //NOTE: Remember to xref:{url_pm2_restart}[restart] the node for the new config changes to take effect.
