--- a/docs/antora/modules/ROOT/pages/setup/npm.adoc
+++ b/docs/antora/modules/ROOT/pages/setup/npm.adoc
@@ -1,6 +1,6 @@
 = NPM setup
 Mona Bärenfänger <mona@lightcurve.io>
-:description: How to install and setup up a Lisk Core node with NPM.
+:description: How to install and setup up a Klayr Core node with NPM.
 // Settings
 :toc: preamble
 // External URLs
@@ -12,10 +12,10 @@ Mona Bärenfänger <mona@lightcurve.io>
 :url_homebrew: https://brew.sh/
 // Project URLs
 :url_run_logging: ROOT::run-blockchain/logging.adoc
-:url_devnet_passphrase: https://github.com/LiskHQ/lisk-core/blob/development/config/devnet/passphrase.json
+:url_devnet_passphrase: https://github.com/KlayrHQ/klayr-core/blob/development/config/devnet/passphrase.json
 :fn: footnote:hdd[These recommendations are derived from the log level settings, in the event that the user needs to increase storage to prevent limited memory access and potential memory-related problems with a node. Furthermore, as more transactions are processed and added to the blockchain, the size of the blockchain increases over time and this directly affects the HDD storage requirements for a blockchain node. Hence, adhering to the above listed requirements is highly recommended.]
 
-How to set up a Lisk Core node with NPM.
+How to set up a Klayr Core node with NPM.
 
 == Pre-installation
 
@@ -140,18 +140,18 @@ include::partial$firewall-setup.adoc[]
 
 == Installation
 
-Install Lisk Core with NPM:
+Install Klayr Core with NPM:
 
 [source,bash]
 ----
-npm install --global lisk-core
+npm install --global klayr-core
 ----
 
 === Location
 
-Lisk Core will be installed under the installation path of NPM.
+Klayr Core will be installed under the installation path of NPM.
 
-To check the location where Lisk Core was installed, execute the following:
+To check the location where Klayr Core was installed, execute the following:
 
 [source,bash]
 ----
@@ -169,7 +169,7 @@ Mainnet::
 --
 [source,bash]
 ----
-lisk-core start --network mainnet
+klayr-core start --network mainnet
 ----
 
 [NOTE]
@@ -192,7 +192,7 @@ Alternatively, start the node with the following flag:
 
 [source,bash]
 ----
-lisk-core start --network mainnet --console-log=info
+klayr-core start --network mainnet --console-log=info
 ----
 
 See the xref:{url_run_logging}[] guide for more information about logging.
@@ -203,7 +203,7 @@ Testnet::
 --
 [source,bash]
 ----
-lisk-core start --network testnet
+klayr-core start --network testnet
 ----
 --
 Devnet::
@@ -211,10 +211,10 @@ Devnet::
 --
 [source,bash]
 ----
-lisk-core start --network devnet
+klayr-core start --network devnet
 ----
 --
-NOTE: The passphrase for the genesis account(s) can be found here in the Lisk Core GitHub repository under the following path: {url_devnet_passphrase}[config/devnet/passphrase.json].
+NOTE: The passphrase for the genesis account(s) can be found here in the Klayr Core GitHub repository under the following path: {url_devnet_passphrase}[config/devnet/passphrase.json].
 
 ====
 
