--- a/docs/antora/modules/ROOT/partials/core-post-installation.adoc
+++ b/docs/antora/modules/ROOT/partials/core-post-installation.adoc
@@ -1,5 +1,5 @@
 :url_pm2: https://github.com/Unitech/pm2
-:url_config_logrotation: lisk-docs::run-blockchain/logging.adoc#logrotation
+:url_config_logrotation: klayr-docs::run-blockchain/logging.adoc#logrotation
 :url_mgmt_pm2: management/pm2.adoc
 :url_ref_cli: reference/cli.adoc
 
@@ -11,9 +11,9 @@
 
 == Post-installation (optional)
 
-=== Use pm2 to run Lisk Core in the background
+=== Use pm2 to run Klayr Core in the background
 
-It is recommended to use a process manager such as {url_pm2}[PM2^] to run Lisk Core in the background.
+It is recommended to use a process manager such as {url_pm2}[PM2^] to run Klayr Core in the background.
 // For further information, please see the xref:url_process_management[Process management guide].
 
 //TODO: Add links back, once the respective docs are updated
@@ -21,7 +21,7 @@ It is recommended to use a process manager such as {url_pm2}[PM2^] to run Lisk C
 
 === Enable IPC & WS in the config
 
-To make use of all the Lisk Core commands, enable IPC in the config.
+To make use of all the Klayr Core commands, enable IPC in the config.
 
 .Example: Enable IPC & WS via config.json
 [source,json]
@@ -38,23 +38,23 @@ To make use of all the Lisk Core commands, enable IPC in the config.
 },
 ----
 
-Alternatively, start Lisk Core with the flag `--api-ipc` to enable IPC:
+Alternatively, start Klayr Core with the flag `--api-ipc` to enable IPC:
 
 .Example: Enable IPC via flag
 [source,bash]
 ----
-lisk-core start --api-ipc
+klayr-core start --api-ipc
 ----
 
-NOTE: Please note that specifying any of the `--api-ipc`, `--api-ws`, or `--api-http` flags in the `lisk-core start` command overrides the `rpc.modes` settings in the `config.json`.
+NOTE: Please note that specifying any of the `--api-ipc`, `--api-ws`, or `--api-http` flags in the `klayr-core start` command overrides the `rpc.modes` settings in the `config.json`.
 
 // === Log rotation
 
-// It is recommended to set up a log rotation, as the log of the Lisk Core files can grow very large over time.
+// It is recommended to set up a log rotation, as the log of the Klayr Core files can grow very large over time.
 
 
 // Check the guide xref:{url_config_logrotation}[Managing logs] in the SDK docs for more information.
 
-// TODO: Enable Log rotation section above and add link back, once the respective docs are updated. (after issue Lisk-docs#1533 Update managing logs is completed).
+// TODO: Enable Log rotation section above and add link back, once the respective docs are updated. (after issue Klayr-docs#1533 Update managing logs is completed).
 
 
