--- a/docs/antora/modules/ROOT/pages/management/migration.adoc
+++ b/docs/antora/modules/ROOT/pages/management/migration.adoc
@@ -4,13 +4,13 @@
 :experimental:
 :idprefix:
 :idseparator: -
-:snapshotHeight: 23390991
-:snapshotHeightTestnet: 20449414
+:snapshotHeight: -
+:snapshotHeightTestnet: 21916546
 :initRounds: 587
 :initRoundsTime: 1 week
-:klayr-migrator: klayr-migrator-v2.0.1-linux-x64.tar.gz
-:klayr-migrator_darwinx64: klayr-migrator-v2.0.1-darwin-x64.tar.gz
-:klayr-migrator_darwinarm64: klayr-migrator-v2.0.1-darwin-arm64.tar.gz
+:klayr-migrator: klayr-migrator-v2.0.7.tar.gz
+:klayr-migrator_darwinx64: klayr-migrator-v2.0.7-darwin-x64.tar.gz
+:klayr-migrator_darwinarm64: klayr-migrator-v2.0.7-darwin-arm64.tar.gz
 :docs_sdk: klayr-sdk::
 :docs_klayr: ROOT::
 :docs_klayrv5: ROOT::
@@ -18,13 +18,14 @@
 :url_curl: https://curl.se/
 :url_jq: https://jqlang.github.io/jq/
 :url_klayr_chat: https://klayr.chat/
-:url_klayr_migrator: https://downloads.klayr.com/klayr-migrator/{klayr-migrator}
-:url_klayr_migrator_darwinarm64: https://downloads.klayr.com/klayr-migrator/{klayr-migrator_darwinarm64}
-:url_klayr_migrator_darwinx64: https://downloads.klayr.com/klayr-migrator/{klayr-migrator_darwinx64}
-:url_wallet: https://klayr.com/wallet
+:url_klayr_migrator: https://downloads.klayr.xyz/klayr-migrator/{klayr-migrator}
+:url_klayr_migrator_darwinarm64: https://downloads.klayr.xyz/klayr-migrator/{klayr-migrator_darwinarm64}
+:url_klayr_migrator_darwinx64: https://downloads.klayr.xyz/klayr-migrator/{klayr-migrator_darwinx64}
+:url_wallet: https://klayr.xyz/wallet
+:url_wallet_lisk: https://lisk.com/wallet
 :url_jsonrpc: https://www.jsonrpc.org/specification
-:url_klayr_blog_migration: https://klayr.com/blog/posts/announcing-klayr-testnet-v4-migration
-:url_klayr_blog_migration_mainnet: https://klayr.com/blog/posts/announcing-klayr-mainnet-v4-migration
+:url_klayr_blog_migration: https://klayr.xyz/blog/posts/announcing-klayr-testnet-v4-migration
+:url_klayr_blog_migration_mainnet: https://klayr.xyz/blog/posts/announcing-klayr-mainnet-v4-migration
 // Project URLs
 :url_run_validator: {docs_klayr}run-blockchain/become-validator.adoc
 :url_run_pm2: {docs_klayr}run-blockchain/process-management.adoc
@@ -36,16 +37,16 @@
 :url_cli_generatorenable: core-cli.adoc#generatorenable
 :url_cli_endpointinvoke: core-cli.adoc#endpointinvoke
 
-This guide explains how to migrate a Klayr Core v3 node to Klayr Core v4 using the Klayr Migrator v2.
+This guide explains how to migrate a Lisk Core node to Klayr Core using the Klayr Migrator v2.
 
-The Klayr migrator CLI will generate a new genesis block for Klayr Core v4.
-The new genesis block is created based on a snapshot of the old blockchain (running on Klayr Core v3.1.0 or later) at a given height.
+The Klayr migrator CLI will generate a new genesis block for Klayr Core.
+The new genesis block is created based on a snapshot of the old Lisk blockchain (running on Lisk Core v4.0.2 or later) at a given height.
 
 [IMPORTANT]
 ====
-All active validators on the Klayr Mainnet and the Klayr Testnet need to follow this guide to correctly migrate their nodes to the new network, in order to not miss any blocks after the network hard fork.
+All active validators on the Lisk Mainnet and the Lisk Testnet need to follow this guide to correctly migrate their nodes to the new network, in order to not miss any blocks after the network hard fork.
 
-Optionally, anyone running a Klayr Core v3.1.0 (or later) who is not an active validator can also participate in the migration process.
+Optionally, anyone running a Lisk Core v4.0.2 (or later) who is not an active validator can also participate in the migration process.
 In this case, the following steps 2.4 and 2.5 in this guide can be skipped, as they are only relevant for the current validators.
 ====
 
@@ -59,7 +60,7 @@ In this case, the following steps 2.4 and 2.5 in this guide can be skipped, as t
 The following system requirements are recommended for running the migration script:
 
 Memory::
-* minimum of 8GB  RAM
+* minimum of 8GB RAM
 
 Storage::
 * minimum 40GB HDD
@@ -77,23 +78,21 @@ The following dependencies are required for running the migration script:
 Node.js::
 * Version 18 (LTS) installed via NVM
 
-Klayr Core::
-* Version 3.1.0 or later
+Lisk Core::
+* Version 4.0.2 or later
 ====
 
-=== Ensure you are running version 3.1.0 (or later) of Klayr Core
-Ensure you are running version 3.1.0 (or later) of Klayr Core to be able to seamlessly migrate to Klayr Core 4.0.0.
+=== Ensure you are running version 4.0.2 (or later) of Lisk Core
+Ensure you are running version 4.0.2 (or later) of Lisk Core to be able to seamlessly migrate to Klayr Core.
 
-We *recommend* to install *v3.1.1* of Klayr Core, because it comes with the Mainnet snapshot height pre-configured. If using an existing data directory, kindly make sure to use the `--overwrite-config` flag when restarting the application.
-
-Print the Klayr Core node info in the terminal, and check the value of `version`. Also, kindly ensure that the `backup.height` property is present and the corresponding value matches the announced migration height of {snapshotHeight}.
+Print the Lisk Core node info in the terminal, and check the value of `version`. Also, kindly ensure that the `backup.height` property is present and the corresponding value matches the announced migration height of {snapshotHeight}.
 
 [source,bash]
 ----
-klayr-core node:info --pretty
+lisk-core node:info --pretty
 ----
 
-NOTE: If your version is 3.1.0, please ensure to set `backup.height` to the announced snapshot height in your node config and restart the node with the `--overwrite-config` flag.
+NOTE: If your version is 4.0.x, please ensure to set `backup.height` to the announced snapshot height in your node config and restart the node with the `--overwrite-config` flag.
 
 === Setting up the Klayr Migrator
 
@@ -220,25 +219,25 @@ For more information check the {url_klayr_blog_migration}[Testnet migration anno
 The height is needed by the `klayr-migrator` in the next step.
 A snapshot of the blockchain will be created at this particular height, which will then be used to create the genesis block for the new blockchain.
 
-=== Ensure Klayr Core v3.1.x is fully synced with the network
+=== Ensure Lisk Core v4.0.x is fully synced with the network
 Check the current block height of your node directly in the terminal by running the following command:
 
 [source,bash]
 ----
-klayr-core node:info --pretty
+lisk-core node:info --pretty
 ----
 
-Compare the current height of your node to the network height in {url_wallet}[Klayr Desktop^], which is shown on the kbd:[Network] or kbd:[Blocks] pages.
+Compare the current height of your node to the network height in {url_wallet_lisk}[Lisk Desktop^], which is shown on the kbd:[Network] or kbd:[Blocks] pages.
 
-TIP: To view the current height of the *Klayr Testnet*, use the network switcher of Klayr Desktop, which can be enabled in the settings.
+TIP: To view the current height of the *Lisk Testnet*, use the network switcher of Lisk Desktop, which can be enabled in the settings.
 
-Alternatively, users can also verify the current height by comparing `data.height` in the response from the https://service.klayr.com/api/v2/network/status[^] endpoint.
+Alternatively, users can also verify the current height by comparing `data.height` in the response from the https://service.lisk.com/api/v3/network/status[^] endpoint.
 
 To directly check the current height via the command line, run:
 
 [source,bash]
 ----
-curl --silent https://service.klayr.com/api/v2/network/status | jq '.data.height'
+curl --silent https://service.klayr.com/api/v3/network/status | jq '.data.height'
 ----
 
 To run the command, both {url_curl}[curl^] and {url_jq}[jq^] are required to be installed.
@@ -247,11 +246,11 @@ If both heights are equal, it is verified that your node is fully synced with th
 
 === Open ports
 
-Open the necessary ports for Klayr Core v4.
+Open the necessary ports for Klayr Core.
 
 [IMPORTANT]
 ====
-If you migrate the existing Klayr Core v3 config with the `--auto-migrate-config` flag in the next step <<run-klayr-migrator>>, please ensure that the necessary ports in the final v4 config are open for communication.
+If you migrate the existing Lisk Core v4 config with the `--auto-migrate-config` flag in the next step <<run-klayr-migrator>>, please ensure that the necessary ports in the final v4 config are open for communication.
 
 The final config (when auto-migrating) is printed on the screen for the user's confirmation. You can check for the exact port details there.
 It should be the same that you were using with v3.
@@ -309,18 +308,18 @@ CAUTION: If you choose to specify custom output path with the `--output` flag, p
 .Custom data path
 [TIP]
 ====
-In case a custom xref:{url_sdk_config_system}[dataPath] is defined in the config, that is different from the default path `~/.klayr/klayr-core`, then it is possible to define the data path with the `--klayr-core-v3-data-path` flag like so:
+In case a custom xref:{url_sdk_config_system}[dataPath] is defined in the config, that is different from the default path `~/.lisk/lisk-core`, then it is possible to define the data path with the `--lisk-core-data-path` flag like so:
 
 [source,bash,subs=attributes+]
 ----
-klayr-migrator --snapshot-height {snapshotHeight} --klayr-core-v3-data-path ~/klayr/custom/path/  --auto-migrate-config --auto-start-klayr-core-v4
+klayr-migrator --snapshot-height {snapshotHeight} --klayr-core-data-path ~/klayr/custom/path/  --auto-migrate-config --auto-start-klayr-core-v4
 ----
 ====
 
 .Custom config
 [TIP]
 ====
-In case a xref:{url_build_custom_config}[custom config] is used for Klayr Core v3, then it is also possible to define the path to the custom config file with the `--config` flag like so:
+In case a xref:{url_build_custom_config}[custom config] is used for Lisk Core v4, then it is also possible to define the path to the custom config file with the `--config` flag like so:
 
 [source,bash,subs=attributes+]
 ----
@@ -392,24 +391,24 @@ To verify that the migrator created the correct new genesis block, compare the n
 
 [source,bash]
 ----
-grep \"id\": ./klayr-migrator/output/4c09e6a781fc4c7bdb936ee815de8f94190f8a7519becd9de2081832be309a99/genesis_block.json
+grep \"id\": ./klayr-migrator/output/00000000/genesis_block.json
 ----
 
 The hashes can be shared in the dedicated network channel on {url_klayr_chat}[klayr.chat^].
 
 ====
 
-=== Stop Klayr Core v3.1.x
+=== Stop Lisk Core v4.0.x
 
-After the `klayr-migrator` script has finished and the announced snapshot height has passed, there is no reason to continue running Klayr Core v3.1.x, and therefore it is recommended to stop it.
+After the `klayr-migrator` script has finished and the announced snapshot height has passed, there is no reason to continue running Lisk Core v4.0.x, and therefore it is recommended to stop it.
 
 [IMPORTANT]
 ====
-It is important to stop Klayr Core v3 *before* starting Klayr Core v4.
-If the migrator is started with `--auto-start-klayr-core-v4` flag, the user is prompted to verify that Klayr Core v3 is stopped - only afterwards, the migration script will continue.
+It is important to stop Lisk Core *before* starting Klayr Core.
+If the migrator is started with `--auto-start-klayr-core-v4` flag, the user is prompted to verify that Lisk Core is stopped - only afterwards, the migration script will continue.
 
 .Prompt when
- Please stop Klayr Core v3 to continue. Type 'yes' and press Enter when ready. [yes/no]: yes
+ Please stop Lisk Core to continue. Type 'yes' and press Enter when ready. [yes/no]: yes
 ====
 
 //TODO: Update with correct command to stop Klayr Core
@@ -422,13 +421,13 @@ klayr-core
 ----
 ////
 
-NOTE: Users that have set something up to start Klayr Core on boot, whether it's through `cron` or `systemd` or something else, should keep that in mind and adjust things accordingly so that Klayr Core 4.0.0 gets started instead of Klayr Core 3.1.x.
+NOTE: Users that have set something up to start Lisk Core on boot, whether it's through `cron` or `systemd` or something else, should keep that in mind and adjust things accordingly so that Klayr Core gets started instead of Lisk Core.
 
-Last but not least, remove the folder with Klayr Core v3.1.x.
+Last but not least, remove the folder with Lisk Core.
 
 
 === Start Klayr Core v4
-If you set the flag `--auto-start-klayr-core-v4` when running klayr-migrator, it will start Klayr Core v4 in the background (managed by PM2) right after successful migration.
+If you set the flag `--auto-start-klayr-core-v4` when running klayr-migrator, it will start Klayr Core in the background (managed by PM2) right after successful migration.
 
 Otherwise, start Klayr Core manually like so:
 
@@ -463,23 +462,23 @@ You can verify that the node is running correctly by executing the following com
 klayr-core system:node-info --pretty
 ----
 
-Check the value of `version` in the response, to verify you are running version 4.0.0 of Klayr Core.
+Check the value of `version` in the response, to verify you are running version 4.0.5 of Klayr Core.
 
 === Enable block generation after the migration (for validators)
 
-After migration, *101 initial validators* will be active to generate blocks during the `initRounds`.
-All other validators will be banned during the bootstrap period.
+After migration, *51 initial validators* will be active to generate blocks during the `initRounds`.
+All other validators will be inactive during the bootstrap period.
 
 `initRounds` is the number of rounds for the bootstrap period of the new network.
-The bootstrap period after migration to Core v4 is *{initRounds} rounds*.
+The bootstrap period after migration to Klayr is *{initRounds} rounds*.
 
-The initial validators will be exactly the 101 validators that were in active positions in the Klayr Core v3 network, at the time of the migration.
+The initial validators will be exactly the top 51 validators that were in active positions in the Lisk network, at the time of the migration.
 
 For the initial validators, it will be important to enable block generation as soon as possible on the new node, to not miss any block rewards.
 
 It is also important that a maximum number of validators participate in the network migration.
 If only a small number of validators migrate their nodes, this can prolong the bootstrap period.
-Additionally, for blocks to be finalized, enough of the active validators (minimum 68) need to participate in the migration process.
+Additionally, for blocks to be finalized, enough of the active validators (minimum 35) need to participate in the migration process.
 
 After {initRounds} rounds, the normal Klayr PoS protocol will be followed to generate the list of active validators, but only for the validators who have <<register-legacy-validator-keys,registered their validator keys>>.
 
@@ -628,19 +627,19 @@ klayr-core endpoint:invoke random_setHashOnion '{"address":"klyqaxxmj78frvgpjgwv
 
 ==== Import validator info data
 
-Look in the output directory of the klayr-migrator for a file called `forgingStatus.json` (the specific location will be in the migrator output), this will contain the valid validator info data to enable block generation on the Klayr Core v4 node.
+Look in the output directory of the klayr-migrator for a file called `forgingStatus.json` (the specific location will be in the migrator output), this will contain the valid validator info data to enable block generation on the Klayr Core node.
 
 .Migrator output example
- Finished exporting forging status to /root/klayr-migrator/output/15f0dacc1060e91818224a94286b13aa04279c640bd5d6f193182031d133df7c/forgingStatus.json
+ Finished exporting forging status to ~/klayr-migrator/output/00000000/forgingStatus.json
 
 .Alternative option in the event of data loss
 TIP: In case the validator info data is lost, the validator can use the **snapshot height** for `height`, `maxHeightPrevoted` and `maxHeightGenerated` to enable block generation safely.
 
-The v3 forging info data corresponds to the v4 validator info data in the following way:
+The Lisk forging info data corresponds to the Klayr validator info data in the following way:
 
-* `height` -> `height`
-* `maxHeightPrevoted` -> `maxHeightPrevoted`
-* `maxHeightPreviouslyForged` -> `maxHeightGenerated`
+* `height`
+* `maxHeightPrevoted`
+* `maxHeightGenerated`
 
 To import the validator info data, invoke the endpoint `generator_setStatus` like so:
 
@@ -663,7 +662,7 @@ Replace the address `klyqaxxmj78frvgpjgwvf4yqjjkcrr9yhn2sxxwm3` with your valida
 .Don't use zeros as validator info data!
 [WARNING]
 ====
-If the validator already generated blocks with Klayr Core v3, they need to use their current validator info data.
+If the validator already generated blocks with Lisk Core, they need to use their current validator info data.
 The validator info data is migrated during the migration process, and can directly be used to enable block generation on the v4 node.
 
 To directly set the values, use the `--use-status-value` flag, or set the values manually as described below.
@@ -681,32 +680,6 @@ klayr-core generator:enable klyqaxxmj78frvgpjgwvf4yqjjkcrr9yhn2sxxwm3 --height=1
 ----
 ====
 
-=== Register legacy validator keys
-
-.This step is crucial for migrating validators!
-IMPORTANT: As already mentioned, all non-initial validators will be *banned* during the bootstrap period.
-The registration of the legacy validator keys has to be done at the *latest by the end of `initRounds`*, to be eligible to generate blocks in the new network.
-Otherwise, the validator will continue to be banned on the network, until the validator keys are registered in the legacy module.
-
-To register the legacy validator keys with the new node, create a new `registerKeys` transaction like so:
-
-[source,bash]
-----
-klayr-core transaction:create legacy registerKeys 400000 --key-derivation-path=legacy --send
-----
-
-It will ask you for the required parameters:
-----
-? Please enter passphrase:  [hidden]
-? Please enter: blsKey:
-? Please enter: proofOfPossession:
-? Please enter: generatorKey:
-----
-
-The required parameters can be obtained from the `keys.json` file, which was created in step <<create-the-validator-keys>> previously.
-
-NOTE: To send transactions from multisignature accounts, please follow the instructions xref:ROOT::integrate-blockchain/multisignature-accounts-and-transactions.adoc#how-to-create-a-multi-signature-transaction[here].
-
-The migration of Klayr Core from v3 to v4 is now completed.
+The migration of Lisk Core to Klayr Core is now completed.
 
 If you have specific questions regarding the process or need additional support, please reach out in the dedicated community channels, like {url_klayr_chat}[^].
